@@ -15,6 +15,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk):
 ----------------------------
 
+- more resolution fixes for resolution scaling (symbolscale case) (#3157)
+
 - Make sure layer extents are saved when a mapfile is written (#2969)
 
 - Fixed CurvePolygons from oracle not drawn (#2772)
